Pattern2.java added